# Kuroii-VisionHub

./: .gitignore  AGENTS.md  README.md  README_EN.md  index.html  package-lock.json  package.json  vite.config.ts  启动 VisionHub Studio.cmd  远程检查并启动 VisionHub Studio.cmd
docs/: ai-creation-v3-plan.md  generation-error-diagnostics.md  inspiration-center-roadmap.md  kuroii-brand-asset-map.md  library-v2-plan.md  provider-contract.md  roadmap.md  visionhub-development-plan.md
docs/release-notes/: 0.5.0-draft.md  0.5.1-draft.md  0.5.2-draft.md  0.5.25-draft.md  0.5.25-installer-validation.md  0.5.25.md  0.5.3-draft.md  0.5.4-draft.md  0.5.5-draft.md
reference-packs/: README.md
scripts/: before_tauri_dev.ps1  build_test_exe.ps1  clean_dev_locks.ps1  copy_release_exe.ps1  create_icon.py  dev.ps1  dev_static.ps1  dev_web.ps1  generate_brand_assets.ps1  install_dependencies.ps1  release_artifact_helpers.ps1  release_candidate_check.py  remote_release.ps1  run_checks.ps1  setup_portable_toolchain.ps1  smoke_check.py  stage_release_artifacts.ps1  start_release.ps1  start_visionhub_dev.ps1  stop_app.ps1  ui_qa_check.py  use_portable_toolchain.ps1  wait_for_vite.ps1
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.static.conf.json
src-tauri/src/: main.rs
src/domain/: batchQueueTypes.ts  inspirationTypes.ts  providerTypes.ts
src/i18n/: index.ts
src/providers/: manifests.ts  mockAdapter.ts  openaiImagesAdapter.ts  registry.ts  tauriOpenAIAdapter.ts
src/services/: appSettings.ts  batchQueue.ts  batchQueueExecutor.ts  comfyUIWorkflow.test.ts  desktopApi.ts  (+27 more)
(+21 files in other folders)
