[package]
name = "visionhub-studio"
version = "0.3.2"
description = "Desktop-first multi-provider AI image generation workspace"
authors = ["VisionHub Studio"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "2"
reqwest = { version = "0.12", features = ["json", "multipart"] }
base64 = "0.22"
tokio = { version = "1", features = ["time"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
